# idp-server/internal/interfaces/http/dto/logout.go
@@ -1,0 +1,5 @@
+package dto
+
+type LogoutRequest struct {
+	ReturnTo string `json:"return_to" form:"return_to"`
+}
